# rust-cpp

./: .gitmodules  .mailmap  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  appveyor.yml  bump_version.sh  publish_crates.sh  test.sh
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: lib.rs
cpp/: Cargo.toml
cpp/src/: lib.rs
cpp_build/: Cargo.toml
cpp_build/src/: lib.rs  parser.rs  strnom.rs
cpp_common/: Cargo.toml  cpp_common.rs
cpp_common/src/: lib.rs
cpp_macros/: Cargo.toml
cpp_macros/src/: lib.rs
cpp_synmap/: Cargo.toml  README.md
cpp_synmap/src/: lib.rs
macros/: Cargo.toml
macros/examples/: test.rs
macros/src/: lib.rs
src/: build.rs  data.rs  lib.rs  lint.rs  mac.rs  types.rs
syn_sourcemap/: Cargo.toml
syn_sourcemap/src/: lib.rs
test/: Cargo.toml  build.rs
test/src/: cpp_class.rs  examples.rs  header.h  inner.rs  inner_sibling.rs  invalid_code.rs  lib.rs  lib.rs.in
test/src/inner/: explicit_path.rs  innerinner.rs  mod.rs
test/src/inner_sibling/: child.rs
test/src/inner_sibling/child2/: mod.rs
test/src/nomod/: inner.rs
tests/: basic_use.rs
