[package]
name = "cpp"
version = "0.1.0"
authors = ["Michael Layzell <michael@thelayzells.com>"]

description = "Write C++ code inline in your rust code!"
repository = "https://github.com/mystor/rust-cpp"
readme = "README.md"
license = "MPL-2.0"
keywords = ["c", "cxx", "cpp", "ffi", "syntex", "plugin"]

[dependencies]
gcc = "0.3"
syntex_syntax = "0.32"
