[package]
name = "cpp"
version = "0.5.10"
authors = ["Nika Layzell <nika@thelayzells.com>", "Olivier Goffart <olivier.goffart@slint-ui.com>"]
edition = "2018"
description = "Inline C++ code closures"
readme = "../README.md"
license = "MIT/Apache-2.0"
keywords = ["c", "cxx", "ffi", "compiler"]
categories = ["development-tools::ffi"]
repository = "https://github.com/mystor/rust-cpp"
documentation = "https://docs.rs/cpp"

[dependencies]
cpp_macros = { version = "=0.5.10", path = "../cpp_macros" }

[dev-dependencies]
cpp_build = { version = "=0.5.10", path = "../cpp_build" }
