[package]
name = "cpp_build"
version = "0.4.0"
authors = ["Nika Layzell <nika@thelayzells.com>", "Olivier Goffart <ogoffart@woboq.com>"]
description = "Cargo build script for the `cpp` crate"
readme = "../README.md"
license = "MIT/Apache-2.0"
keywords = ["c", "cxx", "ffi", "compiler", "build-dependencies"]
categories = ["development-tools::ffi"]
repository = "https://github.com/mystor/rust-cpp"
documentation = "https://docs.rs/cpp_build"

[dependencies]
lazy_static = "1.0"
cc = "1.0"
cpp_common = { path = "../cpp_common", version = "=0.4.0" }
cpp_synmap = { path = "../cpp_synmap", version = "0.3.0" }
cpp_syn = { version = "0.12", features=["full", "visit"] }
cpp_synom = { version = "0.12" }
