[package]
name = "cpp_build"
version = "0.5.2"
authors = ["Nika Layzell <nika@thelayzells.com>", "Olivier Goffart <ogoffart@woboq.com>"]
description = "Cargo build script for the `cpp` crate"
readme = "../README.md"
license = "MIT/Apache-2.0"
keywords = ["c", "cxx", "ffi", "compiler", "build-dependencies"]
categories = ["development-tools::ffi"]
repository = "https://github.com/mystor/rust-cpp"
documentation = "https://docs.rs/cpp_build"

[features]
# Ignore compilations error of the C++ code when building the documentation, as the docs.rs server
# might not have the required libraries
docs-only = []

[dependencies]
lazy_static = "1.0"
cc = "1.0"
syn = { version = "0.15", features=["full", "visit", "extra-traits"] }
proc-macro2 = "0.4"
regex = "1"
unicode-xid = "0.1"

[package.metadata.docs.rs]
features = [ "docs-only" ]
