[package]
name = "cpp_build"
version = "0.5.6"
authors = ["Nika Layzell <nika@thelayzells.com>", "Olivier Goffart <ogoffart@woboq.com>"]
edition = "2018"
description = "Cargo build script for the `cpp` crate"
readme = "../README.md"
license = "MIT/Apache-2.0"
keywords = ["c", "cxx", "ffi", "compiler", "build-dependencies"]
categories = ["development-tools::ffi"]
repository = "https://github.com/mystor/rust-cpp"
documentation = "https://docs.rs/cpp_build"

[features]
# Ignore compilations error of the C++ code when building the documentation, as the docs.rs server
# might not have the required libraries
docs-only = []

[dependencies]
lazy_static = "1.0"
cc = "1.0.38"
cpp_common = { path = "../cpp_common", version = "=0.5.6" }
syn = { version = "1.0", features=["full", "visit"] }
proc-macro2 = "1.0"
regex = "1"
unicode-xid = "0.2"

[package.metadata.docs.rs]
features = [ "docs-only" ]
