[package]
name = "cpp_common"
version = "0.5.6"
authors = ["Nika Layzell <nika@thelayzells.com>", "Olivier Goffart <ogoffart@woboq.com>"]
edition = "2018"
description = "Implementation details crate for the `cpp` crate"
readme = "../README.md"
license = "MIT/Apache-2.0"
keywords = ["c", "cxx", "ffi", "compiler", "build-dependencies"]
categories = ["development-tools::ffi"]
repository = "https://github.com/mystor/rust-cpp"
documentation = "https://docs.rs/cpp_common"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
lazy_static = "1.0"
proc-macro2 = "1.0"
