[package]
name = "cpp_macros"
version = "0.5.2"
authors = ["Nika Layzell <nika@thelayzells.com>", "Olivier Goffart <ogoffart@woboq.com>"]
description = "Procedural macro implementation for the `cpp` crate"
readme = "../README.md"
license = "MIT/Apache-2.0"
keywords = ["c", "cxx", "ffi", "compiler"]
categories = ["development-tools::ffi"]
repository = "https://github.com/mystor/rust-cpp"
documentation = "https://docs.rs/cpp_macros"

[features]
# Ignore compilations error of the C++ code when building the documentation, as the docs.rs server
# might not have the required libraries
docs-only = []

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.0"
syn = { version = "0.15", features=["full", "visit", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"
aho-corasick = "0.6"
byteorder = "1.0"

[package.metadata.docs.rs]
features = [ "docs-only" ]
